# aws-resource-catalog

./: LICENSE  README.md  setup.cfg
aws_resource_catalog/: __init__.py
catalog/: boto3_services.json  cfn_resource_types.json  pricing_offers_index.json
knowledge/accessanalyzer/: analyzer.yaml
knowledge/acmpca/: certificate.yaml  certificateauthority.yaml  certificateauthorityactivation.yaml  permission.yaml
knowledge/aiops/: investigationgroup.yaml
knowledge/amazonmq/: broker.yaml  configuration.yaml  configurationassociation.yaml
knowledge/amplify/: app.yaml  branch.yaml  domain.yaml  idle_amplify_app.yaml
knowledge/amplifyuibuilder/: component.yaml  form.yaml  theme.yaml
knowledge/apigateway/: account.yaml  apikey.yaml  authorizer.yaml  basepathmapping.yaml  basepathmappingv2.yaml  clientcertificate.yaml  deployment.yaml  documentationpart.yaml  documentationversion.yaml  domainname.yaml  domainnameaccessassociation.yaml  domainnamev2.yaml  gatewayresponse.yaml  idle_rest_api.yaml  method.yaml  model.yaml  requestvalidator.yaml  resource.yaml  restapi.yaml  stage.yaml  usageplan.yaml  usageplankey.yaml  vpclink.yaml
knowledge/apigatewayv2/: api.yaml  apigatewaymanagedoverrides.yaml  apimapping.yaml  authorizer.yaml  deployment.yaml  domainname.yaml  idle_http_api.yaml  integration.yaml  integrationresponse.yaml  model.yaml  route.yaml  routeresponse.yaml  routingrule.yaml  stage.yaml  vpclink.yaml
knowledge/appconfig/: application.yaml  (+7 more)
schemas/: resource.v1.json
scripts/: generate_stubs.py  refresh_catalog.py
tests/: test_yaml_valid.py
(+1589 files in other folders)
