[metadata]
name = aws-resource-catalog
version = 0.1.0
description = Machine-readable catalog of billable AWS resource types, lifecycle, and orphan-detection rules
long_description = file: README.md
long_description_content_type = text/markdown
author = Brad Chai
license = MIT

[options]
packages = aws_resource_catalog
install_requires =
    pyyaml>=6.0

[options.package_data]
aws_resource_catalog =
    ../knowledge/**/*.yaml
    ../catalog/*.json
    ../schemas/*.json
